refactor(mwl_client): migrate to mwl_adapter pattern
Introduced mwl_adapter interface to abstract MWL storage implementation,
removing 500+ lines of conditional compilation from mwl_client.

Changes:
- Created mwl_adapter interface with memory and pacs implementations
- Refactored mwl_client to use adapter pattern via dependency injection
- Removed #ifdef PACS_BRIDGE_HAS_PACS_SYSTEM blocks from mwl_client
- Updated CMakeLists.txt to include new adapter files

Implements #285

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -183,6 +183,15 @@ if(PACS_BRIDGE_HAS_SQLITE)
     )
 endif()
 
+# MWL adapter - abstraction for MWL storage
+# See: https://github.com/kcenon/pacs_bridge/issues/285
+list(APPEND PACS_BRIDGE_SOURCES
+    src/integration/mwl_adapter.cpp
+)
+list(APPEND PACS_BRIDGE_HEADERS
+    include/pacs/bridge/integration/mwl_adapter.h
+)
+
 # MLLP Transport
 list(APPEND PACS_BRIDGE_SOURCES
     src/mllp/mllp_server.cpp
