feat(integration): add pacs_adapter interface for standardized PACS integration
Implement pacs_adapter interface that provides a consistent abstraction
over DICOM operations (MPPS, MWL, Storage), enabling full pacs_system
integration while maintaining standalone capability.

Changes:
- Add pacs_adapter.h with interface definitions
  - Define DICOM data structures (dicom_dataset, mpps_record, mwl_item)
  - Define query parameter structures (mpps_query_params, mwl_query_params)
  - Define service adapter interfaces (mpps_adapter, mwl_adapter, storage_adapter)
  - Define combined pacs_adapter interface with connection management
  - Define pacs_error enum with error codes (-850 to -899)
- Add pacs_adapter.cpp with stub implementations
  - Implement stub_mpps_adapter for standalone mode
  - Implement stub_mwl_adapter for standalone mode
  - Implement stub_storage_adapter for standalone mode
  - Implement stub_pacs_adapter combining all services
  - Add validation methods for data structures
- Update CMakeLists.txt to include pacs_adapter sources
- Update src/integration/CMakeLists.txt documentation

This interface consolidates scattered PACS functionality from
mpps_handler.cpp and mwl_client.cpp into a single, testable abstraction.

Resolves #283
Part of #273

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -192,6 +192,15 @@ list(APPEND PACS_BRIDGE_HEADERS
     include/pacs/bridge/integration/mwl_adapter.h
 )
 
+# PACS adapter - standardized PACS integration interface
+# See: https://github.com/kcenon/pacs_bridge/issues/283
+list(APPEND PACS_BRIDGE_SOURCES
+    src/integration/pacs_adapter.cpp
+)
+list(APPEND PACS_BRIDGE_HEADERS
+    include/pacs/bridge/integration/pacs_adapter.h
+)
+
 # MLLP Transport
 list(APPEND PACS_BRIDGE_SOURCES
     src/mllp/mllp_server.cpp
