feat(mllp): add network adapter interface and BSD socket implementation
Implement the foundation for abstracting MLLP server's network layer:
- Define mllp_network_adapter.h interface with abstract base classes
- Implement bsd_mllp_server.cpp using platform-specific BSD sockets
- Support both Windows (Winsock2) and POSIX (Linux/macOS) platforms
- Enable future TLS support through adapter pattern

Key components:
- mllp_session: Abstract connection interface with send/receive
- mllp_server_adapter: Abstract server management interface
- bsd_mllp_session: BSD socket implementation of session
- bsd_mllp_server: BSD socket implementation of server adapter

Platform handling:
- Windows: Winsock2 API with ws2_32.lib
- Linux: BSD sockets with TCP_KEEPIDLE/KEEPINTVL/KEEPCNT
- macOS: BSD sockets with TCP_KEEPALIVE (no interval/count support)

This lays the groundwork for removing 200+ lines of platform-specific
code from mllp_server.cpp and enables future TLS implementation.

Closes #305

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -203,11 +203,14 @@ list(APPEND PACS_BRIDGE_HEADERS
 
 # MLLP Transport
 list(APPEND PACS_BRIDGE_SOURCES
+    src/mllp/mllp_network_adapter.cpp
+    src/mllp/bsd_mllp_server.cpp
     src/mllp/mllp_server.cpp
     src/mllp/mllp_client.cpp
 )
 list(APPEND PACS_BRIDGE_HEADERS
     include/pacs/bridge/mllp/mllp_types.h
+    include/pacs/bridge/mllp/mllp_network_adapter.h
     include/pacs/bridge/mllp/mllp_server.h
     include/pacs/bridge/mllp/mllp_client.h
 )
