feat(mllp): add TLS support to MLLP network adapter
Implement TLS-enabled MLLP server adapter using OpenSSL for secure
HL7 message transmission. Supports TLS 1.2/1.3 with configurable
cipher suites and client certificate authentication.

Key components:
- tls_mllp_session: TLS-enabled session with encrypted I/O
- tls_mllp_server: Server adapter with TLS handshake support
- Supports both OpenSSL-enabled and stub builds

Resolves #306

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -205,6 +205,7 @@ list(APPEND PACS_BRIDGE_HEADERS
 list(APPEND PACS_BRIDGE_SOURCES
     src/mllp/mllp_network_adapter.cpp
     src/mllp/bsd_mllp_server.cpp
+    src/mllp/tls_mllp_server.cpp
     src/mllp/mllp_server.cpp
     src/mllp/mllp_client.cpp
 )
