test(mllp): add unit and BSD adapter integration tests
Add comprehensive test suite for MLLP network adapter:
- Unit tests for adapter interface (network_error, server_config, session_stats)
- Integration tests for BSD socket adapter (connection lifecycle, concurrency)
- Test certificates for TLS testing (future use)
- CMake configuration for test builds

Part of #315 (Unit tests + BSD adapter tests)
Parent: #307 (Comprehensive MLLP adapter testing)
Depends on: #305 (BSD implementation) - COMPLETED

Test coverage:
- Interface contract validation
- Configuration validation
- Connection lifecycle (connect/send/receive/close)
- Sequential and concurrent connections (10+ clients)
- Large message transmission (>1MB)
- Session statistics accuracy
- Error condition handling

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1080,3 +1080,10 @@ message(STATUS "  - emr_e2e_test")
 message(STATUS "  - hapi_fhir_test")
 message(STATUS "==========================")
 message(STATUS "")
+
+# =============================================================================
+# MLLP Network Adapter Tests (Issue #315)
+# =============================================================================
+
+# Add MLLP test subdirectory
+add_subdirectory(mllp)
