fix(test): remove abstract class move test and add socket headers
- Remove SessionIsMovable test (abstract classes cannot be directly tested)
- Add platform-specific socket headers for BSD adapter tests
- Add PROJECT_SOURCE_DIR to include directories for test access to implementation headers

--- a/tests/mllp/CMakeLists.txt
+++ b/tests/mllp/CMakeLists.txt
@@ -46,6 +46,11 @@ endif()
 # Test: BSD Socket Adapter
 add_executable(bsd_adapter_test bsd_adapter_test.cpp)
 
+target_include_directories(bsd_adapter_test
+    PRIVATE
+        ${PROJECT_SOURCE_DIR}
+)
+
 target_link_libraries(bsd_adapter_test
     PRIVATE
         pacs_bridge
