--- a/tests/mllp/CMakeLists.txt
+++ b/tests/mllp/CMakeLists.txt
@@ -44,39 +44,45 @@ endif()
 # =============================================================================
 
 # Test: BSD Socket Adapter
-add_executable(bsd_adapter_test bsd_adapter_test.cpp)
+# Note: BSD adapter integration tests use real network sockets which can hang
+# in coverage builds due to instrumentation overhead. Skip for coverage.
+if(NOT BRIDGE_ENABLE_COVERAGE)
+    add_executable(bsd_adapter_test bsd_adapter_test.cpp)
 
-target_include_directories(bsd_adapter_test
-    PRIVATE
-        ${PROJECT_SOURCE_DIR}
-)
-
-target_link_libraries(bsd_adapter_test
-    PRIVATE
-        pacs_bridge
-        pacs_bridge_compile_options
-)
-
-if(PACS_BRIDGE_HAS_GTEST)
-    if(TARGET GTest::gtest_main)
-        target_link_libraries(bsd_adapter_test PRIVATE GTest::gtest_main GTest::gmock)
-    elseif(TARGET gtest_main)
-        target_link_libraries(bsd_adapter_test PRIVATE gtest_main gmock)
-    endif()
-endif()
-
-# Platform-specific socket libraries
-if(WIN32)
-    target_link_libraries(bsd_adapter_test PRIVATE ws2_32)
-endif()
-
-# Discover tests for CTest
-if(PACS_BRIDGE_HAS_GTEST)
-    gtest_discover_tests(bsd_adapter_test
-        PROPERTIES
-            LABELS "integration;mllp;network;phase2"
-            TIMEOUT 30
+    target_include_directories(bsd_adapter_test
+        PRIVATE
+            ${PROJECT_SOURCE_DIR}
     )
+
+    target_link_libraries(bsd_adapter_test
+        PRIVATE
+            pacs_bridge
+            pacs_bridge_compile_options
+    )
+
+    if(PACS_BRIDGE_HAS_GTEST)
+        if(TARGET GTest::gtest_main)
+            target_link_libraries(bsd_adapter_test PRIVATE GTest::gtest_main GTest::gmock)
+        elseif(TARGET gtest_main)
+            target_link_libraries(bsd_adapter_test PRIVATE gtest_main gmock)
+        endif()
+    endif()
+
+    # Platform-specific socket libraries
+    if(WIN32)
+        target_link_libraries(bsd_adapter_test PRIVATE ws2_32)
+    endif()
+
+    # Discover tests for CTest
+    if(PACS_BRIDGE_HAS_GTEST)
+        gtest_discover_tests(bsd_adapter_test
+            PROPERTIES
+                LABELS "integration;mllp;network;phase2"
+                TIMEOUT 30
+        )
+    endif()
+else()
+    message(STATUS "Skipping bsd_adapter_test in coverage build (network I/O tests)")
 endif()
 
 # =============================================================================
