fix(test): apply comprehensive CI timeout scaling across all test categories
Extends CI timeout scaling (10x factor) to address test timeouts
causing CI job cancellations.

Changes:
- tests/CMakeLists.txt:
  - add_gtest_test macro: 60s -> 600s in CI (unit tests)
  - add_bridge_test macro: 60s -> 600s in CI (custom framework tests)
  - add_integration_test macro: 300s -> 3000s in CI (integration tests)
  - Performance tests: 120s -> 1200s in CI
  - Load tests: 180s -> 1800s in CI

- tests/mllp/CMakeLists.txt:
  - bsd_adapter_test: 30s -> 600s in CI (network I/O tests)
  - tls_adapter_test: 60s -> 600s in CI (TLS handshake tests)

Root Cause:
CI environments have constrained resources and parallel test execution
causes resource contention, making tests run significantly slower than
local development environments. Previous commits (0d5dd22, 23a0402,
a0a8dc1, ad3034a) addressed specific test categories, but timeouts
were still occurring in:
- ReliableSender tests (60s timeout)
- BSDAdapter tests (300s timeout)
- Integration tests (300s timeout)

These accumulated timeouts caused CI jobs to exceed GitHub Actions'
maximum duration, resulting in cancellation.

Impact:
- Fixes test timeout issues in PR #325
- Prevents CI job cancellations due to accumulated test timeouts
- Maintains faster local test execution (no change)
- Applies consistent 10x scaling factor across all test categories

Related to #317 - Performance and memory tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -110,11 +110,21 @@ macro(add_gtest_test TEST_NAME)
     endif()
 
     # Parse timeout from labels or use default
-    set(_TEST_TIMEOUT 60)
-    if(_TEST_LABELS MATCHES "performance")
-        set(_TEST_TIMEOUT 120)
-    elseif(_TEST_LABELS MATCHES "load")
-        set(_TEST_TIMEOUT 180)
+    # Apply CI scaling factor (10x) for constrained CI environments
+    if(DEFINED ENV{CI} OR DEFINED ENV{GITHUB_ACTIONS})
+        set(_TEST_TIMEOUT 600)  # 10 minutes for CI
+        if(_TEST_LABELS MATCHES "performance")
+            set(_TEST_TIMEOUT 1200)  # 20 minutes for performance tests in CI
+        elseif(_TEST_LABELS MATCHES "load")
+            set(_TEST_TIMEOUT 1800)  # 30 minutes for load tests in CI
+        endif()
+    else()
+        set(_TEST_TIMEOUT 60)  # 1 minute for local
+        if(_TEST_LABELS MATCHES "performance")
+            set(_TEST_TIMEOUT 120)  # 2 minutes for performance tests locally
+        elseif(_TEST_LABELS MATCHES "load")
+            set(_TEST_TIMEOUT 180)  # 3 minutes for load tests locally
+        endif()
     endif()
 
     if(PACS_BRIDGE_HAS_GTEST)
@@ -171,11 +181,21 @@ macro(add_bridge_test TEST_NAME)
     endif()
 
     # Parse timeout from labels or use default
-    set(_TEST_TIMEOUT 60)
-    if(_TEST_LABELS MATCHES "performance")
-        set(_TEST_TIMEOUT 120)
-    elseif(_TEST_LABELS MATCHES "load")
-        set(_TEST_TIMEOUT 180)
+    # Apply CI scaling factor (10x) for constrained CI environments
+    if(DEFINED ENV{CI} OR DEFINED ENV{GITHUB_ACTIONS})
+        set(_TEST_TIMEOUT 600)  # 10 minutes for CI
+        if(_TEST_LABELS MATCHES "performance")
+            set(_TEST_TIMEOUT 1200)  # 20 minutes for performance tests in CI
+        elseif(_TEST_LABELS MATCHES "load")
+            set(_TEST_TIMEOUT 1800)  # 30 minutes for load tests in CI
+        endif()
+    else()
+        set(_TEST_TIMEOUT 60)  # 1 minute for local
+        if(_TEST_LABELS MATCHES "performance")
+            set(_TEST_TIMEOUT 120)  # 2 minutes for performance tests locally
+        elseif(_TEST_LABELS MATCHES "load")
+            set(_TEST_TIMEOUT 180)  # 3 minutes for load tests locally
+        endif()
     endif()
 
     # Register as a single test (custom framework, no gtest discovery)
@@ -404,7 +424,14 @@ add_bridge_test(ecosystem_integration_test "integration;ecosystem;phase0")
 macro(add_integration_test TEST_NAME)
     # Parse optional arguments
     set(_INT_TEST_LABELS "integration;phase2")
-    set(_INT_TEST_TIMEOUT 300)
+
+    # Apply CI scaling factor (10x) for constrained CI environments
+    if(DEFINED ENV{CI} OR DEFINED ENV{GITHUB_ACTIONS})
+        set(_INT_TEST_TIMEOUT 3000)  # 50 minutes for CI integration tests
+    else()
+        set(_INT_TEST_TIMEOUT 300)  # 5 minutes for local integration tests
+    endif()
+
     if(ARGC GREATER 1)
         set(_INT_TEST_LABELS "${ARGV1}")
     endif()
