--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -174,6 +174,9 @@ jobs:
     - name: Configure CMake (Unix)
       if: runner.os != 'Windows'
       working-directory: pacs_bridge
+      env:
+        CI: true
+        GITHUB_ACTIONS: true
       run: |
         # For clang on Linux, use libc++ for better C++23 support
         # This ensures ABI compatibility with GoogleTest built from source
@@ -212,6 +215,9 @@ jobs:
       if: runner.os == 'Windows'
       working-directory: pacs_bridge
       shell: pwsh
+      env:
+        CI: true
+        GITHUB_ACTIONS: true
       run: |
         # Note: BRIDGE_STANDALONE_BUILD=ON (default) - see Issue #142
         # Do NOT refresh PATH - it would overwrite MSVC environment set by ilammy/msvc-dev-cmd
