fix(ci): pass CI build flag directly as CMake variable
Previous attempt used environment variables which worked on macOS/Windows
but failed on Ubuntu (tests timed out after 57 minutes vs 25 minutes on macOS).

Changes:
- Modified CMakeLists.txt to check PACS_BRIDGE_CI_BUILD CMake variable
- Added -DPACS_BRIDGE_CI_BUILD=ON to all cmake configure commands
- This approach is more robust than relying solely on environment variables

Timing comparison (Attempt #1):
- macOS: 25 min (success) - env vars worked
- Windows: 30 min (success) - env vars worked
- Ubuntu: 57 min (timeout) - env vars failed

Expected: Ubuntu tests should complete in ~25-30 minutes with CI scaling.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -193,6 +193,7 @@ jobs:
             -DBRIDGE_BUILD_EXAMPLES=OFF \
             -DBRIDGE_BUILD_HL7=ON \
             -DBRIDGE_BUILD_FHIR=OFF \
+            -DPACS_BRIDGE_CI_BUILD=ON \
             -DCMAKE_C_COMPILER=clang \
             -DCMAKE_CXX_COMPILER=clang++ \
             "-DCMAKE_CXX_FLAGS=-stdlib=libc++" \
@@ -206,6 +207,7 @@ jobs:
             -DBRIDGE_BUILD_EXAMPLES=OFF \
             -DBRIDGE_BUILD_HL7=ON \
             -DBRIDGE_BUILD_FHIR=OFF \
+            -DPACS_BRIDGE_CI_BUILD=ON \
             -DCMAKE_C_COMPILER=${{ matrix.compiler == 'gcc' && 'gcc' || 'clang' }} \
             -DCMAKE_CXX_COMPILER=${{ matrix.compiler == 'gcc' && 'g++' || 'clang++' }}
         fi
@@ -230,6 +232,7 @@ jobs:
           -DBRIDGE_BUILD_EXAMPLES=OFF `
           -DBRIDGE_BUILD_HL7=ON `
           -DBRIDGE_BUILD_FHIR=OFF `
+          -DPACS_BRIDGE_CI_BUILD=ON `
           -DCMAKE_TOOLCHAIN_FILE="$env:VCPKG_ROOT/scripts/buildsystems/vcpkg.cmake" `
           -DVCPKG_MANIFEST_MODE=OFF
 
