fix(ci): declare CI build option properly in CMake
Attempt #2 failed because -DPACS_BRIDGE_CI_BUILD=ON was not properly
evaluated as boolean in Unix CMake (worked only on Windows).

Root cause: CMake variable was not declared with option() command,
causing if(PACS_BRIDGE_CI_BUILD) to always evaluate to false on Unix.

Changes:
1. Added option(PACS_BRIDGE_CI_BUILD ...) declaration in root CMakeLists.txt
2. Increased ctest timeout from 300s to 600s as safety measure

This ensures CMake properly recognizes and evaluates the CI flag on all
platforms (Unix and Windows).

Expected results:
- Ubuntu: tests complete in ~25-30 min (with CI scaling)
- macOS: tests complete in ~25-30 min (with CI scaling)
- Windows: tests complete in ~15-20 min (already working)

Previous attempts:
- Attempt #1: macOS/Windows success (25-30min), Ubuntu failed (57min)
- Attempt #2: Windows only success (16min), Unix failed (54-56min)

Final attempt (3/3).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,6 +59,9 @@ option(BRIDGE_BUILD_BENCHMARKS "Build benchmarks" OFF)
 # Feature options
 option(BRIDGE_ENABLE_TLS "Enable TLS support with OpenSSL" ON)
 
+# CI/CD options
+option(PACS_BRIDGE_CI_BUILD "Enable CI build with reduced test iterations" OFF)
+
 # =============================================================================
 # C++20 Module Support (Experimental)
 #
