fix(ci): pass CI environment variables to test execution step
The CI environment variables (CI and GITHUB_ACTIONS) were being set
during CMake configuration, but not during test execution. This caused
individual test timeout scaling (10x in CI) to not be applied, leading
to timeouts in long-running tests like disaster_recovery_test.

Changes:
- Add CI env vars to 'Run tests' step
- Add CI env vars to 'Run tests for coverage' step

This ensures that CTest's test timeout property (set by
add_integration_test macro) correctly scales timeouts in CI environment.

Fixes: disaster_recovery_test timeout after 60 minutes (job timeout)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -242,6 +242,9 @@ jobs:
 
     - name: Run tests
       working-directory: pacs_bridge
+      env:
+        CI: true
+        GITHUB_ACTIONS: true
       run: |
         cd build
         ctest --output-on-failure --timeout 600
@@ -328,6 +331,9 @@ jobs:
 
     - name: Run tests for coverage
       working-directory: pacs_bridge/build
+      env:
+        CI: true
+        GITHUB_ACTIONS: true
       run: |
         ctest --output-on-failure --timeout 600 || true
 
