test(mllp): add performance benchmarks and memory leak tests
Add comprehensive testing for MLLP network adapter performance
and memory management:

Performance tests (performance_test.cpp):
- Throughput benchmark (>1000 msg/sec target)
- Latency measurement (p50, p95, p99)
- Concurrent client throughput
- Connection churn performance (1000+ cycles)
- Large message throughput
- Connection scaling tests

Memory leak tests (memory_leak_test.cpp):
- Connection lifecycle leak detection
- Rapid connection churn leak check
- Large message handling leak check
- Long-running server leak check
- Error path leak detection (invalid port, abrupt disconnect)
- Server start/stop cycle leak check

Closes #317

--- a/tests/mllp/CMakeLists.txt
+++ b/tests/mllp/CMakeLists.txt
@@ -6,8 +6,12 @@
 # Test executables:
 #   - mllp_network_adapter_test : Unit tests for adapter interface
 #   - bsd_adapter_test           : Integration tests for BSD socket adapter
+#   - tls_adapter_test           : TLS integration tests
+#   - mllp_performance_test           : Performance benchmarks
+#   - mllp_memory_leak_test           : Memory leak detection tests
 #
 # @see https://github.com/kcenon/pacs_bridge/issues/315
+# @see https://github.com/kcenon/pacs_bridge/issues/317
 # =============================================================================
 
 # =============================================================================
@@ -132,6 +136,98 @@ else()
     elseif(NOT PACS_BRIDGE_HAS_OPENSSL)
         message(STATUS "Skipping tls_adapter_test (OpenSSL not available)")
     endif()
+endif()
+
+# =============================================================================
+# Performance Tests
+# =============================================================================
+
+# Test: Performance Benchmarks
+# Note: Performance tests use real network sockets and are skipped in coverage builds
+if(NOT BRIDGE_ENABLE_COVERAGE)
+    add_executable(mllp_performance_test performance_test.cpp)
+
+    target_include_directories(mllp_performance_test
+        PRIVATE
+            ${PROJECT_SOURCE_DIR}
+    )
+
+    target_link_libraries(mllp_performance_test
+        PRIVATE
+            pacs_bridge
+            pacs_bridge_compile_options
+    )
+
+    if(PACS_BRIDGE_HAS_GTEST)
+        if(TARGET GTest::gtest_main)
+            target_link_libraries(mllp_performance_test PRIVATE GTest::gtest_main GTest::gmock)
+        elseif(TARGET gtest_main)
+            target_link_libraries(mllp_performance_test PRIVATE gtest_main gmock)
+        endif()
+    endif()
+
+    # Platform-specific socket libraries
+    if(WIN32)
+        target_link_libraries(mllp_performance_test PRIVATE ws2_32)
+    endif()
+
+    # Discover tests for CTest
+    if(PACS_BRIDGE_HAS_GTEST)
+        gtest_discover_tests(mllp_performance_test
+            PROPERTIES
+                LABELS "performance;mllp;benchmark;phase2"
+                TIMEOUT 120
+        )
+    endif()
+else()
+    message(STATUS "Skipping mllp_performance_test in coverage build (network I/O benchmarks)")
+endif()
+
+# =============================================================================
+# Memory Leak Tests
+# =============================================================================
+
+# Test: Memory Leak Detection
+# Note: Memory leak tests use real network sockets and are skipped in coverage builds
+# Run with Valgrind: valgrind --leak-check=full ./mllp_memory_leak_test
+# Run with ASan: cmake -DCMAKE_CXX_FLAGS="-fsanitize=address" ..
+if(NOT BRIDGE_ENABLE_COVERAGE)
+    add_executable(mllp_memory_leak_test memory_leak_test.cpp)
+
+    target_include_directories(mllp_memory_leak_test
+        PRIVATE
+            ${PROJECT_SOURCE_DIR}
+    )
+
+    target_link_libraries(mllp_memory_leak_test
+        PRIVATE
+            pacs_bridge
+            pacs_bridge_compile_options
+    )
+
+    if(PACS_BRIDGE_HAS_GTEST)
+        if(TARGET GTest::gtest_main)
+            target_link_libraries(mllp_memory_leak_test PRIVATE GTest::gtest_main GTest::gmock)
+        elseif(TARGET gtest_main)
+            target_link_libraries(mllp_memory_leak_test PRIVATE gtest_main gmock)
+        endif()
+    endif()
+
+    # Platform-specific socket libraries
+    if(WIN32)
+        target_link_libraries(mllp_memory_leak_test PRIVATE ws2_32)
+    endif()
+
+    # Discover tests for CTest
+    if(PACS_BRIDGE_HAS_GTEST)
+        gtest_discover_tests(mllp_memory_leak_test
+            PROPERTIES
+                LABELS "memory;mllp;leak-check;phase2"
+                TIMEOUT 60
+        )
+    endif()
+else()
+    message(STATUS "Skipping mllp_memory_leak_test in coverage build (network I/O tests)")
 endif()
 
 # =============================================================================
