ci: exclude performance/memory tests from CI runs
Performance and memory leak tests are designed for local benchmarking
and can timeout on GitHub Actions due to shared infrastructure overhead.
The Ubuntu CI jobs were cancelled after ~57 minutes (60-min timeout).

Uses CTest label exclusion (-LE "performance|memory") to skip these
tests while keeping all unit and integration tests running.

Performance/memory tests can still be run locally:
  ctest -L "performance|memory"

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -231,11 +231,14 @@ jobs:
       working-directory: pacs_bridge
       run: cmake --build build --parallel
 
+    # Run tests excluding performance and memory benchmarks
+    # Performance/memory tests are designed for local benchmarking, not CI
+    # They can timeout on GitHub Actions due to shared infrastructure overhead
     - name: Run tests
       working-directory: pacs_bridge
       run: |
         cd build
-        ctest --output-on-failure --timeout 300
+        ctest --output-on-failure --timeout 300 -LE "performance|memory"
       continue-on-error: true
 
     - name: Upload test results
