refactor(router): migrate queue_manager from std::thread to thread_adapter (#282)
Replace raw std::thread worker/cleanup threads with thread_adapter for
centralized thread management and priority scheduling. This unifies the
IExecutor and standalone code paths by using shared future-based tracking.

Key changes:
- Guard thread_pool_adapter with #ifndef for standalone compilation
- Move thread_adapter.cpp to always-compiled sources in CMakeLists.txt
- Replace std::thread/cleanup_thread_ with thread_adapter pool
- Unify worker_futures_/cleanup_future_ outside #ifndef guards
- Add WorkerThreadTest suite (3 tests) for thread_adapter integration
- Fix pre-existing NackMaxRetries test failure (retry delay vs sleep mismatch)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -160,7 +160,6 @@ if(NOT BRIDGE_STANDALONE_BUILD)
         src/integration/executor_adapter.cpp
         src/integration/logger_adapter.cpp
         src/integration/network_adapter.cpp
-        src/integration/thread_adapter.cpp
     )
     list(APPEND PACS_BRIDGE_HEADERS
         include/pacs/bridge/integration/executor_adapter.h
@@ -182,6 +181,11 @@ if(PACS_BRIDGE_HAS_SQLITE)
         src/integration/database_adapter.cpp
     )
 endif()
+
+# Thread adapter (always available - simple_thread_adapter fallback for standalone)
+list(APPEND PACS_BRIDGE_SOURCES
+    src/integration/thread_adapter.cpp
+)
 
 # MWL adapter - abstraction for MWL storage
 # See: https://github.com/kcenon/pacs_bridge/issues/285
