fix(tests): correct CMake macro ARGN handling and gtest_discover_tests labels
Fix two CMake issues causing test labels to be silently ignored:

1. In add_gtest_test and add_bridge_test macros, replace if(ARGN)
   with if(${ARGC} GREATER 1). CMake macro text-substitution expands
   if(ARGN) to if(unit;load) which evaluates as if(unit) — always
   FALSE when no variable named "unit" exists. This caused all custom
   labels (phase2, load, performance, etc.) and their associated
   timeouts to be dropped, defaulting every test to "unit" / 60s.

2. gtest_discover_tests PROPERTIES LABELS expands semicolon-separated
   lists to space-separated tokens in generated scripts, causing CTest
   to only recognize the first label. Reduce to single most-important
   label per test target (phase2, performance, or memory) so -LE
   exclusion filters work correctly.

Also add phase2 timeout tier (180s) to add_bridge_test macro.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -104,8 +104,9 @@ macro(add_gtest_test TEST_NAME)
     )
 
     # Parse optional labels from additional arguments
+    # Note: use ARGC instead of ARGN in macros (ARGN text-substitution makes if() unreliable)
     set(_TEST_LABELS "unit")
-    if(ARGN)
+    if(${ARGC} GREATER 1)
         set(_TEST_LABELS "${ARGN}")
     endif()
 
@@ -119,6 +120,9 @@ macro(add_gtest_test TEST_NAME)
 
     if(PACS_BRIDGE_HAS_GTEST)
         # Use gtest_discover_tests for better CTest integration
+        # Known limitation: gtest_discover_tests expands LABELS list to space-separated
+        # tokens, so only the FIRST label is recognized by CTest. Place the most
+        # important label first (e.g., "performance" or "phase2" for exclusion filters).
         include(GoogleTest)
         gtest_discover_tests(${TEST_NAME}
             WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
@@ -165,8 +169,9 @@ macro(add_bridge_test TEST_NAME)
     )
 
     # Parse optional labels from additional arguments
+    # Note: use ARGC instead of ARGN in macros (ARGN text-substitution makes if() unreliable)
     set(_TEST_LABELS "unit")
-    if(ARGN)
+    if(${ARGC} GREATER 1)
         set(_TEST_LABELS "${ARGN}")
     endif()
 
@@ -175,6 +180,8 @@ macro(add_bridge_test TEST_NAME)
     if(_TEST_LABELS MATCHES "performance")
         set(_TEST_TIMEOUT 120)
     elseif(_TEST_LABELS MATCHES "load")
+        set(_TEST_TIMEOUT 180)
+    elseif(_TEST_LABELS MATCHES "phase2")
         set(_TEST_TIMEOUT 180)
     endif()
 
