test(e2e): implement E2E workflow tests for Phase 5c (#321)
Add comprehensive end-to-end workflow tests validating complete
business scenarios from message receipt to PACS operations:

HL7 to MPPS workflow tests (7 tests):
- Complete IHE Scheduled Workflow: ORM->MWL->MPPS->ORU
- Order cancellation with MPPS discontinuation
- Multi-procedure concurrent workflow across modalities
- MWL-MPPS accession number correlation
- RIS failover during workflow
- Error resilience after operation failures
- High-volume workflow (50 procedures + concurrent MLLP)

FHIR workflow tests (7 tests):
- ServiceRequest to DiagnosticReport full pipeline
- Patient lookup integration for MWL creation
- Comprehensive DiagnosticReport building
- Result status lifecycle (preliminary->final->amended)
- Multi-system HIS+PACS+EMR integration
- Incomplete study result validation
- Retry policy backoff calculations

Closes #321

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1172,3 +1172,10 @@ message(STATUS "")
 
 # Add MLLP test subdirectory
 add_subdirectory(mllp)
+
+# =============================================================================
+# E2E Workflow Tests (Issue #321, Phase 5c)
+# =============================================================================
+
+# Add E2E workflow test subdirectory
+add_subdirectory(e2e)
